# gaming-server

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  conanfile.txt
src/: api_request_handler.cpp  api_request_handler.h  application.cpp  application.h  collision_detector.cpp  collision_detector.h  extra_data.cpp  extra_data.h  file_request_handler.cpp  file_request_handler.h  http_server.cpp  http_server.h  json_loader.cpp  json_loader.h  logger.cpp  logger.h  loot_generator.cpp  main.cpp  model.cpp  model.h  model_serialization.cpp  model_serialization.h  programm_options.cpp  programm_options.h  request_handler.h  response_utils.cpp  response_utils.h  sdk.h  serialization_listener.cpp  serialization_listener.h  tagged.h  ticker.cpp  ticker.h
src/database/app/: use_cases.h  use_cases_impl.cpp  use_cases_impl.h
src/database/domain/: player_repository.h
src/database/postgres/: connection_pool.h  postgres.cpp  postgres.h
tests/: collision-detector-tests.cpp  state-serialization-tests.cpp
